# binance-download-trades-lambdas

./: .gitignore  deploy-functions.sh  package-lock.json  package.json  put_messages.py  pyproject.toml  serverless.yml
download_trades_lambdas/: handler.py
tests/: test_download_trades_lambdas.py
